Add roles logic
